[package]
name = "edb-derive"
version = "0.1.0"
edition = "2021"

description = "an in-memory database"
authors = ["Lain-dono <lain.dono@gmail.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[lib]
proc-macro = true
